<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newchat.NewChatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/new_chat_map_toolbar"
            style="@style/kiwi.Toolbar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_new_chat"
            app:title="채팅방 생성" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_chat_image"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:src="@drawable/logo_splash_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_chat_map_toolbar"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerCut"
            android:layout_marginTop="20dp"
            app:strokeColor="?attr/colorOnSurfaceLight"
            app:strokeWidth="3dp" />

        <ImageButton
            android:id="@+id/btn_chat_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_add_btn_Description"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintBottom_toBottomOf="@+id/iv_chat_image"
            app:layout_constraintEnd_toEndOf="@+id/iv_chat_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_chat_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColorHint="@color/text_color"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_chat_image"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_chat_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_chat_name"
                android:maxLength="20"
                android:maxLines="1"
                android:nextFocusDown="@+id/et_chat_description"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_chat_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColorHint="@color/text_color"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_chat_name"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_chat_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_chat_description"
                android:maxLength="50"
                android:nextFocusDown="@+id/et_chat_max_personnel" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_chat_max_personnel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_color"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_chat_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_chat_max_personnel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_chat_max_number_count_hint"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_max_personnel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/text_chat_max_number_count"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="?attr/colorOnSurfaceLight"
            app:layout_constraintTop_toBottomOf="@+id/til_chat_max_personnel" />


        <TextView
            android:id="@+id/tv_chat_keyword_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:text="@string/text_chat_keyword"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_max_personnel"
            android:textColor="?attr/colorOnSurfaceLight"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_chat_keyword"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_chat_keyword_search"
            app:icon="@drawable/ic_search"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_chat_keyword_text"
            app:strokeColor="@color/grey1"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_new_chat_keywords"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_chat_keyword"
            tools:itemCount="3"
            tools:listitem="@layout/item_keyword" />

        <TextView
            android:id="@+id/tv_chat_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurfaceLight"
            android:layout_marginStart="15dp"
            android:text="@string/text_chat_place"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_new_chat_keywords" />

        <TextView
            android:id="@+id/tv_chat_select_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_chat_address_text"
            android:textColor="?attr/colorOnSurfaceLight"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_chat_address"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="50dp"
            android:text="@string/text_chat_place_search"
            app:icon="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_chat_select_address"
            app:strokeColor="@color/grey1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>