<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.kiwi.kiwitalk.ui.search.SearchChatMapViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchChatMapFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/layout_bottomSheet"
            style="@style/Widget.MaterialComponents.BottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:elevation="7dp"
            android:focusable="true"
            app:behavior_hideable="true"
            app:behavior_peekHeight="@dimen/bottomSheet_collapse_size"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <!-- Drag handle for accessibility -->
            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/layout_markerInfo_preview"
                layout="@layout/view_marker_preview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottomSheet_collapse_size"
                bind:item="@{vm.placeChatInfo}" />

            <TextView
                android:id="@+id/tv_tmp_chatDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/medium_margin"
                android:text="채팅방 더보기"
                android:textSize="30sp"
                android:visibility="invisible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:layout_anchor="@id/tv_tmp_chatDetail"
                app:layout_anchorGravity="bottom" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/searchChat_map_toolbar"
                style="@style/kiwi.Toolbar"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/menu_search_chat_map"
                app:title="채팅방 검색" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_searchChat_keywords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/tv_searchChat_keywords"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintBottom_toBottomOf="@id/rv_searchChat_keywords"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/rv_searchChat_keywords" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_searchChat_keywords_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_searchChat_keywords_hint"
                android:textColor="@color/grey4"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_searchChat_keywords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_searchChat_keywords" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_searchChat_keywords"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/fragment_searchChat_map_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/tv_searchChat_keywords"
                app:layout_constraintTop_toBottomOf="@id/searchChat_map_toolbar"
                tools:itemCount="3"
                tools:listitem="@layout/item_keyword"
                tools:visibility="invisible" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_searchChat_map_container"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/rv_searchChat_keywords"
                tools:layout="@layout/layout_map_fragment_dummy" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_createChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="10dp"
            android:contentDescription="@string/new_chat_description"
            android:src="@drawable/ic_search_chat_new_chat" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>